force-app/main/default/objects/Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyLocation__c</fullName>
        <label>Company Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <label>Full Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileNo__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Certifications__c</fullName>
        <label>Other Certifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Certifications__c</fullName>
        <label>Salesforce Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advanced Administrator</fullName>
                </value>
                <value>
                    <fullName>Platform App Builder</fullName>
                </value>
                <value>
                    <fullName>Platform Developer 1</fullName>
                </value>
                <value>
                    <fullName>Platform Developer 2</fullName>
                </value>
                <value>
                    <fullName>Javascript Developer 1</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Developer</fullName>
                </value>
                <value>
                    <fullName>OmniStudio Developer</fullName>
                </value>
                <value>
                    <fullName>Data Architecture and Management Designer</fullName>
                </value>
                <value>
                    <fullName>Sharing and Visibility Designer</fullName>
                </value>
                <value>
                    <fullName>Development Lifecycle and Deployment Designer</fullName>
                </value>
                <value>
                    <fullName>Application Architect</fullName>
                </value>
                <value>
                    <fullName>System Architect</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Heroku Architect</fullName>
                </value>
                <value>
                    <fullName>Integration Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Devops_Certifications__c</fullName>
        <label>Salesforce Devops Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Fundamentals II</fullName>
                </value>
                <value>
                    <fullName>Copado Consultant</fullName>
                </value>
                <value>
                    <fullName>Copado Robotic Testing</fullName>
                </value>
                <value>
                    <fullName>Copado Fundamentals I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Skills__c</fullName>
        <label>Soft Skills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_Methodologies__c</fullName>
        <label>Software Methodologies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_Tools__c</fullName>
        <label>Software Tools</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Super_Badges__c</fullName>
        <label>Super Badges</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Governance Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Admin Super Set</fullName>
                </value>
                <value>
                    <fullName>Advanced Apex Specialist</fullName>
                </value>
                <value>
                    <fullName>Advanced Billing Specialist</fullName>
                </value>
                <value>
                    <fullName>Apex Specialist</fullName>
                </value>
                <value>
                    <fullName>App Builder Super Set</fullName>
                </value>
                <value>
                    <fullName>App Customization Specialist</fullName>
                </value>
                <value>
                    <fullName>Approval Process Management Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Approval Process Specialist Superbadge</fullName>
                </value>
                <value>
                    <fullName>Approval Process Troubleshooting Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Authentication Governance Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Billing Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing Specialist Super Set</fullName>
                </value>
                <value>
                    <fullName>Business Administration Specialist</fullName>
                </value>
                <value>
                    <fullName>CRM Analytics Data Preparation Specialist</fullName>
                </value>
                <value>
                    <fullName>CRM Analytics Super Set</fullName>
                </value>
                <value>
                    <fullName>CRM Analytics and Einstein Discovery Insights Specialist</fullName>
                </value>
                <value>
                    <fullName>Data Categorization and Access Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Data Integration Specialist</fullName>
                </value>
                <value>
                    <fullName>Data Protection Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Data Security Specialist Superbadge</fullName>
                </value>
                <value>
                    <fullName>Developer Super Set</fullName>
                </value>
                <value>
                    <fullName>Extended User Access and Restriction Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Financial Services Cloud Specialist</fullName>
                </value>
                <value>
                    <fullName>Flow Administration Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Flow Elements and Resources Specialist Superbadge</fullName>
                </value>
                <value>
                    <fullName>Flow Fundamentals Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Flow Optimization Superbadge Unit</fullName>
                </value>
                <value>
                    <fullName>Health Cloud Specialist</fullName>
                </value>
                <value>
                    <fullName>Lightning Experience Reports &amp; Dashboards Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Skills__c</fullName>
        <label>Technical Skills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>